cleaned up scripts and binary
20040729191649-6d90f-dc4b143fbdaebea7d6ac1c3db8017c7488be4bda.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+haskell-cabal (0.0.1-2) unstable; urgency=low
+
+  * Cleaned up scripts and name of binary.
+
+ -- Isaac Jones <ijones@debian.org>  Thu, 29 Jul 2004 10:37:31 -0400
+
 haskell-cabal (0.0.1-1) unstable; urgency=low
 
   * Initial Release.
