Add --with-hc-pkg; some Windows fixes
* Add --with-hc-pkg flag to specify the hc-pkg path separately from
  the compiler
* #include config.h where necessary to get the definition of
  mingw32_TARGET_OS.
* Flush stdout before writing to stderr on Windows (gets some
  messages in the right order).

20040818100026-3ed52-4cf35d717efc2508b1336f425e1661b0521cc328.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -88,6 +88,7 @@
 ** configure should check for 'ar' args + properties (see fptools/aclocal.m4)
 ** most commands should accept a -v flag to show command lines?
 ** configure should check sanity of PackageDescription, eg. library /= "" ?
+** configure should check version of compiler
 
 ------------------------------------------------------------
 * Setup Command-line interface
