moved preprocessing function into its own module in preparation for preprocessor work
20040824001257-6d90f-c17da47dd0a9fefc01d0c9cd2ea10c713979f88c.gz

--- a/README
+++ b/README
@@ -47,6 +47,7 @@ Cabal Coders:
 - Simon Marlow
 - Martin Sjögren
 - Krasimir Angelov
+- Malcolm Wallace (via hmake)
 
 Cabal proposal:
 - Isaac Jones
