preprocessing code, some from hmake
These are some of the changes to HMake that Malcolm and I had
talked about some time back.  The PPSuffixHandler is meant to
allow extendability.  Build will probably have to take a list
of these as an argument.

20040824003833-6d90f-11b1f405f17d2fb208eb9cb0d9d16f04d1c7ab37.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,5 +1,9 @@
 * 0.2
-** add simple (cpphs) preprocessing?
+** Preprocessing
+- add simple (cpphs) preprocessing?
+- what other preprocessors can't unlit?
+- 
+
 ** clarify description filename issues
 - allow foo.hsproj?
 
