first pass at ppCommandLine
20040824024933-6d90f-6dccaac65b2c5fe086f48c7711be27c949fec89b.gz

--- a/Distribution/TODO
+++ b/Distribution/TODO
@@ -1,8 +1,7 @@
-* 0.2
 ** Preprocessing
-- add simple (cpphs) preprocessing?
+- move files to output location
+- integrate into preprocessSources function
 - what other preprocessors can't unlit?
-- 
 
 ** clarify description filename issues
 - allow foo.hsproj?
