--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
+** make sure we have consistent behavior, either we pass in the
+   knownPreprocessors or we require the user to pass them in...
+** bug in srcDist where it doesn't move exe sources into place
+
 ** integrate w/ GHC distro
 ** Preprocessing
 - what other preprocessors can't unlit?
