cleaned up ModuleTest for the preprocessed test
20041009224738-6d90f-f6c6168beb67ebfd2f20a228c72ffe3c3c65f4de.gz

--- a/TODO
+++ b/TODO
@@ -2,6 +2,14 @@
    knownPreprocessors or we require the user to pass them in...
 ** bug in srcDist where it doesn't move exe sources into place
 
+** change all concat $ map to concatMap and sequence $ map to
+   sequenceMap
+
+** sdist remove file probably doesn't look in the right place, doesn't
+   put in the files for executables
+
+** where are we using allModules, is this the right place?
+
 ** integrate w/ GHC distro
 ** Preprocessing
 - what other preprocessors can't unlit?
