clean now removes preprocessed sources (and is  more likely to destroy your source code so be careful)
20041009230737-6d90f-2384f5cdd0be89a192c0515393c7e5597f3331ec.gz

--- a/TODO
+++ b/TODO
@@ -10,6 +10,9 @@
 
 ** where are we using allModules, is this the right place?
 
+** move some of the junk in Utils up one level, then use currentDir =
+   "." there.
+
 ** integrate w/ GHC distro
 ** Preprocessing
 - what other preprocessors can't unlit?
