fixed bug where executable sources arent included in sdist
20041013120205-6d90f-b35301143d5dfafc9f339939b787fcf54d8b9d10.gz

--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@
 - if there's a flag, --include-preprocessed-sources (or something
    better) run the preprocessing phase and include both the
    unpreprocessed and the preprocessed sources in the source tarball?
+- why does it need configure first?
 
 ** clarify description filename issues
 - allow foo.hsproj?
