basic HUGS implementation
lots of work to do here still.  cabal can't yet bootstrap because of
the necessit of CPP options pragmas at the top of the files.  See
TODO list for stuff to do for Hugs.

20041102060558-6d90f-5f78302d22da4c102562a3d0156028d28ecff84a.gz

--- a/TODO
+++ b/TODO
@@ -15,9 +15,15 @@
 
 ** what other preprocessors can't unlit?
 
+** Hugs
+- look for "FIX (HUGS)"
+- can't handle cabal's OPTIONS pragmas at the top.
+- no way to tell Hugs to turn packages on or off
+- no register / unregister for hugs
+
 ** find a real test case that uses a preprocessor
 
-** is cpp ever run yet?
+** is cpp ever run yet? NO!
 
 ** for a source tarball:?
 - if there's a flag, --include-preprocessed-sources (or something
