update debian file in prep for release
20041103050344-6d90f-49be628fa75949fe5bea79c59e4e972ee4a2d3fd.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+haskell-cabal (0.2-1) unstable; urgency=low
+
+  * New upstream release
+  * Includes cleanup of treatment of the local packages file
+    ~/.ghc-packages.  Doesn't touch this file unless it's
+    necessary. (Closes: #278667)
+  * Some work on preprocessors.
+
+ -- Isaac Jones <ijones@debian.org>  Tue,  2 Nov 2004 20:06:22 -0800
+
 haskell-cabal (0.1-4) unstable; urgency=low
 
   * Added basic infrastructure for multiple targets, though
