--- a/releaseNotes
+++ b/releaseNotes
@@ -59,3 +59,5 @@ especially the proposal, which will serve as documentation for this
 release:
 
 http://www.haskell.org/cabal/
+
+NOTES 0.2: Adds more HUGS support and preprocessor support.
