--- a/debian/changelog
+++ b/debian/changelog
@@ -1,44 +1,24 @@
-haskell-cabal (0.2-2) unstable; urgency=low
-
-  * Removed spurious depends on ghc5.  Should close 279988.  I'll close
-    that by hand once I'm sure.
-
- -- Isaac Jones <ijones@debian.org>  Sun,  7 Nov 2004 14:21:38 -0800
-
-haskell-cabal (0.2-1) unstable; urgency=low
-
-  * New upstream release
-  * Includes cleanup of treatment of the local packages file
-    ~/.ghc-packages.  Doesn't touch this file unless it's
-    necessary. (Closes: #278667 Closes: #279556).
-  * Some work on preprocessors.
-
- -- Isaac Jones <ijones@debian.org>  Tue,  2 Nov 2004 20:06:22 -0800
-
-haskell-cabal (0.1-4) unstable; urgency=low
-
-  * Added basic infrastructure for multiple targets, though
-    have not yet enabled it because it doesn't yet work upstream.
-
- -- John Goerzen <jgoerzen@complete.org>  Tue,  5 Oct 2004 19:45:27 -0500
-
-haskell-cabal (0.1-3) unstable; urgency=low
-
-  * Fixed old postinst, postrm scripts to do the right thing in more cases.
-
- -- John Goerzen <jgoerzen@complete.org>  Tue,  5 Oct 2004 16:25:29 -0500
-
 haskell-cabal (0.1-2) unstable; urgency=low
 
-  * Install binary under /usr/lib/haskell-libraries/ghc6 in keeping
-    with new Haskell policy.
+  * Some small fixes to package
 
- -- John Goerzen <jgoerzen@complete.org>  Tue,  5 Oct 2004 15:56:03 -0500
+ -- Isaac Jones <ijones@debian.org>  Tue,  7 Sep 2004 10:20:05 -0400
 
 haskell-cabal (0.1-1) unstable; urgency=low
 
-  * Initial release.  Closes: #275069.
+  * New upstream release
 
- -- John Goerzen <jgoerzen@complete.org>  Tue, 05 Oct 2004 13:36:08 -0500
+ -- Isaac Jones <ijones@debian.org>  Sun,  1 Aug 2004 18:47:08 -0400
 
+haskell-cabal (0.0.1-2) unstable; urgency=low
+
+  * Cleaned up scripts and name of binary.
+
+ -- Isaac Jones <ijones@debian.org>  Thu, 29 Jul 2004 10:37:31 -0400
+
+haskell-cabal (0.0.1-1) unstable; urgency=low
+
+  * Initial Release.
+
+ -- Isaac Jones <ijones@debian.org>  Wed, 28 Jul 2004 22:29:38 -0400
 
