test cases, todos, help output
20041208082640-6d90f-c7f6c7b9c3ef9d2176e91768f660b5022db843a7.gz

--- a/TODO
+++ b/TODO
@@ -1,10 +1,8 @@
 * misc
 ** make debian watchfile
-** postinst, test, copy?
+** postinst, test
 ** multiple libraries?
 ** find a real test case that uses preprocessors
-** sync w/ GHC distro
-** add noregister and nopostinst flags to install?
 ** unregistering the package, etc
 *** --user flag to unregister
 
