--- a/TODO
+++ b/TODO
@@ -15,6 +15,13 @@
    command?
 *** Add a flag to configure to specify where to put them?
 
+** It would be useful to have alternatives in dependencies, e.g. HGL
+   could depend on X11 | Win32.
+
+** How about replacing the modules field with hidden-modules, to avoid
+   repetition?
+
+** Rename moveSources
 
 ** Preprocessors
 *** hscpp extensions
