(from CVS) ross paterson commits
** revert to getting main module from the right place
** make singleStanza ignore comment lines too


20050101190821-6d90f-203b3ba8dae0131ec5a65ca333e19c187ebd178b.gz

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 * misc
+** two executables in same directory fails because both create Main.o
 ** make debian watchfile
 ** postinst, test
 ** multiple libraries?
