export some stuff, and pick up some compat stuff for FilePath
20050101201527-6d90f-a70e95afd13b236d49dd3d28770aa06453de7c94.gz

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 * misc
 ** two executables in same directory fails because both create Main.o
+** Executables that depend on the package itself
 ** make debian watchfile
 ** postinst, test
 ** multiple libraries?
