executables that depend on package TODO
20050108190941-6d90f-69ac3d6efd1c34ea48e17dbb0dedeafd1f38344d.gz

--- a/TODO
+++ b/TODO
@@ -1,6 +1,9 @@
 * misc
-** two executables in same directory fails because both create Main.o
-** Executables that depend on the package itself
+
+** Executables that depend on the package itself: build the package
+first, install it into a local package.conf and then build the
+executables against the package.  
+
 ** make debian watchfile
 ** multiple libraries?
 ** find a real test case that uses preprocessors
