some changes for new cabal version to build debian package
20050115212103-6d90f-4247a1a551854d9d5ec4103daec46ab869ac810c.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+haskell-cabal (0.3-1) unstable; urgency=low
+
+  * new upstream version
+
+ -- Isaac Jones <ijones@debian.org>  Sat, 15 Jan 2005 12:55:49 -0800
+
 haskell-cabal (0.2-3) unstable; urgency=low
 
   * added depends on posix (Closes: #280244).
