--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 haskell-cabal (0.3-1) unstable; urgency=low
 
-  * new upstream version
+  * new upstream version.  see upstream changelog for more info.
+  * some interface changes.
 
  -- Isaac Jones <ijones@debian.org>  Sat, 15 Jan 2005 12:55:49 -0800
 
