cleaned up dist target
20050117193227-6d90f-af4336b8cd27a71b1f253fd281e71b4858fcf341.gz

--- a/README
+++ b/README
@@ -4,6 +4,8 @@ http://www.haskell.org/cabal
 
 -= Quirky things about the build system =-
 
+* "make install" as root, then try "ghci -package Cabal" to test it.
+
 * GNUmakefile is the one you're probably interested in.  If you see
   Makefile, it is probably from the fptools build tree, and it won't
   work on its own.
