fixed up some debian/files; prepare for release
20050117200437-6d90f-1e3af7a4e57a14316265a65c6a3f076981c0cd73.gz

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,8 @@
 haskell-cabal (0.3-1) unstable; urgency=low
 
   * new upstream version.  see upstream changelog for more info.
-  * some interface changes.
+  * some interface changes, see upstream changelog.
+  * bumped standards-version.
 
  -- Isaac Jones <ijones@debian.org>  Sat, 15 Jan 2005 12:55:49 -0800
 
