--- a/changelog
+++ b/changelog
@@ -1,6 +1,6 @@
 -*-change-log-*-
 
-0.3  Isaac Jones  <ijones@syntaxpolice.org> Sun Jan 16 2005
+0.4  Isaac Jones  <ijones@syntaxpolice.org> Sun Jan 16 2005
 
 	* Much thanks to all the awesome fptools hackers who have been
 	working hard to build the Haskell Cabal!
@@ -56,6 +56,10 @@
 
 	** The preprocessors have been tested a bit more, and seem to work
 	OK.  Please give feedback if you use these.
+
+0.3  Isaac Jones  <ijones@syntaxpolice.org> Sun Jan 16 2005
+	* Unstable snapshot release
+	* From now on, stable releases are even.
 
 0.2  Isaac Jones  <ijones@syntaxpolice.org>
 
