cleaned up warnings
20050131040903-6d90f-d608d5716fed60d21050f6d5d864d4a7c895c41b.gz

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 * misc
 
+** Add package sanity checker?
+
 ** make debian watchfile
 ** find a real test case that uses preprocessors
 ** unregistering the package, etc
