added some sanity checking
20050131044140-6d90f-197d9b2e9ded91d997a63cfb98cb1acc86787a01.gz

--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 * misc
 
 ** Add package sanity checker?
+** add hooks to haddock cmd
 
 ** make debian watchfile
 ** find a real test case that uses preprocessors
